--- a/src/ui/Button/_size/Button_size_m.module.css
+++ b/src/ui/Button/_size/Button_size_m.module.css
@@ -1,3 +1,5 @@
 .Button.Button_size_m {
-  padding: 10px 20px;
+  min-width: var(--qw-button-size-m-min-width);
+  padding: var(--qw-button-size-m-padding);
+  line-height: var(--qw-button-size-m-line-height);
 }
