--- a/src/ui/Button/Button.module.css
+++ b/src/ui/Button/Button.module.css
@@ -1,10 +1,19 @@
 .Button {
-  color: var(--button-text-color);
-  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  background: rgb(255, 140, 0);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  overflow: visible;
+  box-sizing: border-box;
   border: none;
-  border-radius: 20px;
-  box-shadow: none;
-  display: inline-block;
-  padding: 16px 32px;
+  background: transparent;
+  outline: 0;
+  font-weight: inherit;
+  white-space: nowrap;
+  cursor: pointer;
+  user-select: none;
+
+  &[aria-disabled='true'] {
+    cursor: default;
+    pointer-events: none;
+  }
 }
