--- a/src/ui/Button/_size/Button_size_s.module.css
+++ b/src/ui/Button/_size/Button_size_s.module.css
@@ -1,3 +1,5 @@
 .Button.Button_size_s {
-  padding: 8px 12px;
+  min-width: var(--qw-button-size-s-min-width);
+  padding: var(--qw-button-size-s-padding);
+  line-height: var(--qw-button-size-s-line-height);
 }
