feat(divider): add divider component

--- a/src/ui/Theme/_variant/Theme_variant_default.module.css
+++ b/src/ui/Theme/_variant/Theme_variant_default.module.css
@@ -87,4 +87,9 @@
   --qw-button-size-s-min-width: 100px;
   --qw-button-size-s-line-height: 40px;
   --qw-button-size-s-padding: 0 28px;
+
+  /** Divider */
+  --qw-divider-border-width: 0 0 1px;
+  --qw-divider-border-style: solid;
+  --qw-divider-border-color: #e6e6e6;
 }
