--- a/src/ui/Button/_size/Button_size_m.module.css
+++ b/src/ui/Button/_size/Button_size_m.module.css
@@ -1,5 +1,6 @@
 .Button.Button_size_m {
   min-width: var(--qw-button-size-m-min-width);
   padding: var(--qw-button-size-m-padding);
+  font-size: var(--qw-button-size-m-font-size);
   line-height: var(--qw-button-size-m-line-height);
 }
