--- a/src/ui/Button/_size/Button_size_s.module.css
+++ b/src/ui/Button/_size/Button_size_s.module.css
@@ -1,5 +1,6 @@
 .Button.Button_size_s {
   min-width: var(--qw-button-size-s-min-width);
   padding: var(--qw-button-size-s-padding);
+  font-size: var(--qw-button-size-s-font-size);
   line-height: var(--qw-button-size-s-line-height);
 }
