--- a/src/ui/Theme/_variant/Theme_variant_default.module.css
+++ b/src/ui/Theme/_variant/Theme_variant_default.module.css
@@ -55,17 +55,37 @@
   --qw-typo-s-compact-font-family: var(--qw-typo-font-family);
 
   /** Button */
+
+  /** Button_variant_brand */
   --qw-button-variant-brand-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s,
     background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
   --qw-button-variant-brand-background: var(--qw-color-brand);
   --qw-button-variant-brand-background--disabled: #e6e6e6;
   --qw-button-variant-brand-background--hovered: #ff8200;
   --qw-button-variant-brand-border-radius: 30px;
-  --qw-button-variant-brand-font-size: 20px;
   --qw-button-variant-brand-font-family: var(--qw-typo-font-family);
   --qw-button-variant-brand-text-color: var(--qw-color-base);
   --qw-button-variant-brand-text-color--hovered: rgb(255 255 255 / 90%);
   --qw-button-variant-brand-text-color--disabled: #999999;
+
+  /** Button_variant_simple */
+  --qw-button-variant-simple-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  --qw-button-variant-simple-background: #ffffff;
+  --qw-button-variant-simple-background--disabled: #e6e6e6;
+  --qw-button-variant-simple-background--hovered: #f5f5f5;
+  --qw-button-variant-simple-border-radius: 30px;
+  --qw-button-variant-simple-font-size: 20px;
+  --qw-button-variant-simple-font-family: var(--qw-typo-font-family);
+  --qw-button-variant-simple-text-color: #000000;
+  --qw-button-variant-simple-text-color--hovered: #000000;
+  --qw-button-variant-simple-text-color--disabled: #999999;
+  --qw-button-variant-simple-border-color: #e6e6e6;
+  --qw-button-variant-simple-border-color--disabled: var(--qw-button-variant-simple-background--disabled);
+  --qw-button-variant-simple-border-width: 1px;
+  --qw-button-variant-simple-border-width--disabled: var(--qw-button-variant-simple-border-width);
+  --qw-button-variant-simple-border-style: solid;
+  --qw-button-variant-simple-border-style--disabled: var(--qw-button-variant-simple-border-style);
 
   /** Button_variant_brand Button_size_l */
   --qw-button-variant-brand-size-l-background: linear-gradient(rgb(255 152 16), rgb(255 131 0));
@@ -73,20 +93,28 @@
   --qw-button-variant-brand-size-l-box-shadow--disabled: rgb(255 206 135) 0 0 0;
   --qw-button-variant-brand-size-l-box-shadow--hovered: rgb(255 206 135) 0 25px 50px -10px;
 
+  /** Button_variant_simple Button_size_l */
+  --qw-button-variant-simple-size-l-box-shadow: rgb(0 0 0 / 15%) 0 15px 50px -10px;
+  --qw-button-variant-simple-size-l-box-shadow--disabled: 0 0 0 rgb(0 0 0);
+  --qw-button-variant-simple-size-l-box-shadow--hovered: rgb(0 0 0 / 15%) 0 25px 50px -10px;
+
   /** Button_size_l */
   --qw-button-size-l-min-width: 200px;
   --qw-button-size-l-line-height: 60px;
   --qw-button-size-l-padding: 0 36px;
+  --qw-button-size-l-font-size: 20px;
 
   /** Button_size_m */
   --qw-button-size-m-min-width: 148px;
   --qw-button-size-m-line-height: 48px;
   --qw-button-size-m-padding: 0 32px;
+  --qw-button-size-m-font-size: 16px;
 
   /** Button_size_s */
   --qw-button-size-s-min-width: 100px;
   --qw-button-size-s-line-height: 40px;
   --qw-button-size-s-padding: 0 28px;
+  --qw-button-size-s-font-size: 14px;
 
   /** Divider */
   --qw-divider-border-width: 0 0 1px;
