added tests + removed extra code

--- a/src/ui/Theme/_variant/Theme_variant_default.module.css
+++ b/src/ui/Theme/_variant/Theme_variant_default.module.css
@@ -28,4 +28,5 @@
   @mixin button-theme-default;
   @mixin divider-theme-default;
   @mixin grid-theme-default;
+  @mixin grid-item-theme-default;
 }
