--- a/src/ui/GridItem/_columns/GridItem_columns.module.css
+++ b/src/ui/GridItem/_columns/GridItem_columns.module.css
@@ -1,47 +1,51 @@
-.GridItem.GridItem_columns_1 {
-  grid-area: auto / auto / auto / span 1;
-}
+.GridItem {
+  &.GridItem_columns {
+    &_1 {
+      grid-area: var(--qw-grid-grid-area-columns-1);
+    }
 
-.GridItem.GridItem_columns_2 {
-  grid-area: auto / auto / auto / span 2;
-}
+    &_2 {
+      grid-area: var(--qw-grid-grid-area-columns-2);
+    }
 
-.GridItem.GridItem_columns_3 {
-  grid-area: auto / auto / auto / span 3;
-}
+    &_3 {
+      grid-area: var(--qw-grid-grid-area-columns-3);
+    }
 
-.GridItem.GridItem_columns_4 {
-  grid-area: auto / auto / auto / span 4;
-}
+    &_4 {
+      grid-area: var(--qw-grid-grid-area-columns-4);
+    }
 
-.GridItem.GridItem_columns_5 {
-  grid-area: auto / auto / auto / span 5;
-}
+    &_5 {
+      grid-area: var(--qw-grid-grid-area-columns-5);
+    }
 
-.GridItem.GridItem_columns_6 {
-  grid-area: auto / auto / auto / span 6;
-}
+    &_6 {
+      grid-area: var(--qw-grid-grid-area-columns-6);
+    }
 
-.GridItem.GridItem_columns_7 {
-  grid-area: auto / auto / auto / span 7;
-}
+    &_7 {
+      grid-area: var(--qw-grid-grid-area-columns-7);
+    }
 
-.GridItem.GridItem_columns_8 {
-  grid-area: auto / auto / auto / span 8;
-}
+    &_8 {
+      grid-area: var(--qw-grid-grid-area-columns-8);
+    }
 
-.GridItem.GridItem_columns_9 {
-  grid-area: auto / auto / auto / span 9;
-}
+    &_9 {
+      grid-area: var(--qw-grid-grid-area-columns-9);
+    }
 
-.GridItem.GridItem_columns_10 {
-  grid-area: auto / auto / auto / span 10;
-}
+    &_10 {
+      grid-area: var(--qw-grid-grid-area-columns-10);
+    }
 
-.GridItem.GridItem_columns_11 {
-  grid-area: auto / auto / auto / span 11;
-}
+    &_11 {
+      grid-area: var(--qw-grid-grid-area-columns-11);
+    }
 
-.GridItem.GridItem_columns_12 {
-  grid-area: auto / auto / auto / span 12;
+    &_12 {
+      grid-area: var(--qw-grid-grid-area-columns-12);
+    }
+  }
 }
