feat: added grid elements (#13)
* feat: added grid elements

* added tests + removed extra code

* fixes

Co-authored-by: Natalia Popova <na.popova@qiwi.com>

--- a/src/ui/Theme/_variant/Theme_variant_default.module.css
+++ b/src/ui/Theme/_variant/Theme_variant_default.module.css
@@ -27,4 +27,6 @@
   @mixin text-theme-default;
   @mixin button-theme-default;
   @mixin divider-theme-default;
+  @mixin grid-theme-default;
+  @mixin grid-item-theme-default;
 }
