feat: added radio-group

--- a/src/ui/Theme/_variant/Theme_variant_default.module.css
+++ b/src/ui/Theme/_variant/Theme_variant_default.module.css
@@ -32,4 +32,5 @@
   @mixin grid-item-theme-default;
   @mixin input-theme-default;
   @mixin checkbox-theme-default;
+  @mixin radio-button-theme-default;
 }
